--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,9 +3,9 @@
 
 menu:
 - {name: 'Projects', url: ''}
-- {name: 'Blog',     url: 'blog'}
+#- {name: 'Blog',     url: 'blog'}
 - {name: 'About',    url: 'about'}
-- {name: 'Contact',  url: 'contact'}
+#- {name: 'Contact',  url: 'contact'}
 
 #-------------------------------
 # Projects Section
