--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ menu:
 - {name: 'Projects', url: ''}
 #- {name: 'Blog',     url: 'blog'}
 - {name: 'About',    url: 'about'}
-#- {name: 'Contact',  url: 'contact'}
+- {name: 'Resume',  url: 'https://daniel-burgos.github.io/resume/'}
 
 #-------------------------------
 # Projects Section
