--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -22,11 +22,11 @@ projects:
 # Contact Section
 
 social:
-- {icon: 'twitter',   link: 'https://twitter.com/paululele'}
-- {icon: 'instagram', link: 'https://instagram.com/paululele'}
-- {icon: 'github',    link: 'https://github.com/lenpaul'}
-- {icon: 'linkedin',  link: 'https://linkedin.com/in/lenpaul'}
-- {icon: 'envelope',  link: 'mailto:mailto:l.nguyen.paul@gmail.com'}
+#- {icon: 'twitter',   link: 'https://twitter.com/paululele'}
+#- {icon: 'instagram', link: 'https://instagram.com/paululele'}
+#- {icon: 'github',    link: 'https://github.com/lenpaul'}
+- {icon: 'linkedin',  link: 'https://www.linkedin.com/in/daniel-casanova-58248420b/'}
+#- {icon: 'envelope',  link: 'mailto:mailto:l.nguyen.paul@gmail.com'}
 
 # social network icons available: 'twitter' / 'facebook' / 'github' / 'pinterest' 'google-plus' / 'linkedin' / 'youtube' / 'instagram' / 'dribbble' / 'behance' / 'soundcloud' / 'vine'
 
