--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -36,9 +36,9 @@ social:
 # NOTE: Providing SEO information will make this website more searchable on the internet.
 
 seo:
-  description: 'Personal portfolio powered by Jekyll and GitHub Pages '
-  rel-author: 'https://plus.google.com/u/0/#'
-  rel-publisher: 'https://plus.google.com/u/0/#'
+  description: 'Daniel Casanova Portfolio '
+  #rel-author: 'https://plus.google.com/u/0/#'
+  #rel-publisher: 'https://plus.google.com/u/0/#'
 
 #-------------------------------
 # Google Analytics Section
@@ -49,7 +49,7 @@ seo:
 # NOTE: If you want to use Google Analytics for basic web tracking: Just uncomment and enter your UA-Code here.
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-analytics-ua: 'UA-112060364-3'
+#google-analytics-ua: 'UA-112060364-3'
 
 #-------------------------------
 # Disqus Section
