--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,8 @@ menu:
 - {name: 'About',    url: 'about'}
 - {name: 'Projects', url: ''}
 #- {name: 'Blog',     url: 'blog'}
-#- {name: 'Resume',  url: 'resume-link'}
+- title: Resume
+  url: https://daniel-burgos.github.io/resume/
 
 #-------------------------------
 # Projects Section
