--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@
 menu:
 - {name: 'About',    url: 'about'}
 - {name: 'Projects', url: ''}
-#- {name: 'Blog',     url: 'blog'}
+- {name: 'Blog',     url: 'blog'}
 - title: Resume
   url: https://daniel-burgos.github.io/resume/
 
