--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,9 +4,8 @@
 menu:
 - {name: 'About',    url: 'about'}
 - {name: 'Projects', url: ''}
-- {name: 'Blog',     url: 'blog'}
-- title: 'Resume'
-  url: 'https://daniel-burgos.github.io/resume/'
+- #{name: 'Blog',     url: 'blog'}
+- {name: 'Resume', url: 'https://daniel-burgos.github.io/resume/'}
 
 #-------------------------------
 # Projects Section
