--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ menu:
 - {name: 'About',    url: 'about'}
 - {name: 'Projects', url: ''}
 - #{name: 'Blog',     url: 'blog'}
-- {name: 'Resume', url: 'resume/'}
+- {name: 'Resume', url: 'resume'}
 
 #-------------------------------
 # Projects Section
